--- a/ncurses_tests/CMakeLists.txt
+++ b/ncurses_tests/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -std=c++1y")
 
-set(name ncurses_test)
-file(GLOB sources "*.cpp")
-
-add_executable(${name} ${sources})
-
 set(libraries ncurses)
 
-target_link_libraries(${name} ${libraries})
+set(exes window_test windowing)
+
+foreach(i ${exes})
+    add_executable(${i} ${i}.cpp)
+    target_link_libraries(${i} ${libraries})
+endforeach(i)
