--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -std=c++1y")
 set(name beatcomputer)
 file(GLOB sources "*.cpp")
 
+set(libraries ncurses)
 add_executable(${name} ${sources})
+target_link_libraries(${name} ${libraries})
