--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_BUILD_TYPE RelWithDebInfo)
-add_subdirectory(src)
-add_subdirectory(ncurses_tests)
+add_subdirectory(sequencer)
+add_subdirectory(time_server)
