--- a/time_server/CMakeLists.txt
+++ b/time_server/CMakeLists.txt
@@ -2,9 +2,12 @@ cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -std=c++1y")
 
-set(name beatcomputer)
+include_directories(/usr/local/include/oscpack)
+
+set(name time_server)
 file(GLOB sources "*.cpp")
 
-set(libraries ncurses)
+set(libraries oscpack)
+
 add_executable(${name} ${sources})
 target_link_libraries(${name} ${libraries})
