--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_BUILD_TYPE RelWithDebInfo)
+
 add_subdirectory(gtest)
 add_subdirectory(sequencer)
 add_subdirectory(time_server)
+
+enable_testing()
 add_subdirectory(tests)
+
+include(CPack)
