--- a/time_server/CMakeLists.txt
+++ b/time_server/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -std=c++1y")
 
-include_directories(/usr/local/include/oscpack)
+if(APPLE)
+    include_directories(/usr/local/include/oscpack)
+elseif(UNIX)
+    include_directories(/usr/include/oscpack)
+endif()
 
 set(name time_server)
 file(GLOB sources "*.cpp")
